--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   flutter_spinkit: ^5.1.0
   #flutter launcher icons - edit launcher icons
   flutter_launcher_icons: ^0.10.0
+  #firebase firestore
+  cloud_firestore: ^3.4.7
+  #dateformat
+  intl: ^0.17.0
 
 
 flutter_icons:
